# DNDR

./: IDUMAP.ipynb  README.md  pyproject.toml
src/dndr/: DIAE.py  SEC.py  berry_oos_sec.py  del0.py  del1.py  demo_sec_torus.py  plot_helper.py
